# anyREST

./: .gitignore  LICENSE  README.md  anyrest.py  anyrestHandlers.py  app.py  data.json  firestore.py  main.py  migrate.py  mongodb.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  testing.py  tox.ini
lib/: model.py  test_model.py  test_utils.py  utils.py  viewModel.py
src/: firestore_odr.py  handlers.py
src/anyrest/: firestore_odr.py  handlers.py  model.py  viewModel.py
templates/: doc.html  index.html  new.html
tests/: test_firestore_odr.py  test_model.py  test_utils.py  test_viewModel.py
